# llm-orchestrator

./: Cargo.toml  plan.md
src/: api_key.rs  cancellation.rs  config.rs  lib.rs  main.rs  rate_limit.rs
src/cli/: mod.rs
src/context/: simple.rs
src/core/: cost.rs  error.rs  message.rs  mod.rs  plan.rs  task.rs
src/executor/: executor.rs  merger.rs  mod.rs  progress.rs  retry.rs  worktree.rs
src/git/: branch.rs  cleanup.rs  mod.rs  repo.rs
src/models/: openrouter.rs  types.rs
src/orchestrator/: client.rs  mod.rs  planner.rs  prompts.rs  validator.rs
src/tui/: app.rs  events.rs  layout.rs  mod.rs  terminal.rs
src/tui/components/: chat.rs  log.rs  mod.rs  plan.rs  progress.rs  wizard.rs
src/watcher/: handler.rs
tests/: worktree_integration.rs
